--- a/src/main.css
+++ b/src/main.css
@@ -4,11 +4,11 @@
 
 @layer components {
     .header {
-        @apply font-millik text-6xl leading-[4.688rem]
+        @apply font-millik text-6xl leading-[4rem]
     }
 
     .header-secondary {
-        @apply font-DMSerifDisplay font-bold text-5xl leading-[4.688rem]
+        @apply font-DMSerifDisplay font-bold text-5xl leading-[4rem]
     }
 
     .fr {
@@ -16,6 +16,6 @@
     }
 
     .btn {
-        @apply rounded-lg py-2.5 px-4
+        @apply rounded-lg py-3 lg:py-2 px-4
     }
 }
