--- a/src/main.css
+++ b/src/main.css
@@ -16,6 +16,6 @@
     }
 
     .btn {
-        @apply rounded-lg py-3 lg:py-2 px-4
+        @apply rounded-lg py-3 lg:py-2 px-4 tracking-wider
     }
 }
