--- a/src/main.css
+++ b/src/main.css
@@ -4,11 +4,11 @@
 
 @layer components {
     .header {
-        @apply font-millik text-3xl sm:text-5xl leading-[2rem] md:text-6xl sm:leading-[4rem]
+        @apply font-millik leading-tight text-4xl sm:text-5xl sm:leading-loose md:text-6xl
     }
 
     .header-secondary {
-        @apply font-DMSerifDisplay font-bold text-2xl sm:text-4xl md:text-5xl leading-normal sm:leading-[3.5rem]
+        @apply font-DMSerifDisplay font-bold text-2xl sm:text-4xl md:text-5xl leading-tight sm:leading-loose
     }
 
     .fr {
