--- a/src/main.css
+++ b/src/main.css
@@ -4,11 +4,7 @@
 
 @layer components {
     .header {
-        @apply font-millik leading-tight text-4xl sm:text-5xl sm:leading-loose md:text-6xl
-    }
-
-    .header-secondary {
-        @apply font-DMSerifDisplay font-bold text-2xl sm:text-4xl md:text-5xl leading-tight sm:leading-loose
+        @apply font-semibold leading-[2.188rem]
     }
 
     .fr {
@@ -16,7 +12,7 @@
     }
 
     .btn {
-        @apply rounded-lg py-3 lg:py-2 px-4 tracking-wider
+        @apply rounded-[0.625rem] font-medium py-2.5 leading-8 text-base px-4 tracking-wider
     }
 
     .no-scrollbar {
