chore(design): changed font-size, line-height and feature image for the homepage

--- a/src/main.css
+++ b/src/main.css
@@ -12,7 +12,7 @@
     }
 
     .btn {
-        @apply rounded-[0.625rem] font-medium py-2.5 leading-8 text-base px-4 tracking-wider
+        @apply rounded-[0.625rem] font-medium py-2.5 leading-8 text-[14px] px-4 tracking-wider
     }
 
     .no-scrollbar {
