chore(design): fixed design inconsistencies

--- a/src/main.css
+++ b/src/main.css
@@ -49,18 +49,18 @@
     }
 
     .no-scrollbar::-webkit-scrollbar {
-        display: none;
+        @apply hidden
     }
 
     .input-form {
-        @apply border border-[#dae1e7] focus:outline-none rounded-md py-0.5 px-3 w-full block
+        @apply form-input border border-[#dae1e7] focus:outline-none focus:ring-0 rounded-md py-2.5 px-3 w-full block focus:border-[#dae1e7]
     }
 
     .input-select {
-        @apply form-select border border-[#dae1e7] focus:outline-none rounded-md py-2.5 px-3 w-full block
+        @apply form-select input-form
     }
 
     .input-checkbox {
-        @apply form-checkbox text-brand-purple border-[#979797] rounded p-2 md:px-1 md:py-0.5 cursor-pointer ring-offset-white hover:ring-1 hover:ring-offset-2 hover:ring-brand-purple focus-within:ring-1 focus-within:ring-offset-2 focus-within:ring-brand-purple
+        @apply form-checkbox text-brand-purple border-[#979797] rounded p-2 xl:p-2 md:px-1 md:py-0.5 cursor-pointer ring-offset-white hover:ring-1 hover:ring-offset-2 hover:ring-brand-purple focus-within:ring-1 focus-within:ring-offset-2 focus-within:ring-brand-purple
     }
 }
